added details on special isses and check functions

--- a/submissions.Rmd
+++ b/submissions.Rmd
@@ -12,13 +12,14 @@ d-article > * {
 }
 ```
 
-
 Articles for the R Journal are short to medium length, no more than 20 pages, on topics of interest to the R community. The submission needs to include:
 
 - paper files to build the article including the `.Rmd`, `.tex`, `.bib`, `.sty`, figures. 
 - file to reproduce the results, including R scripts, and data.
 - motivating letter that describes why your paper is suitable for the consideration by the R Journal.
 - if needed, supplementary files that might include additional technical details or examples.
+
+Read the information below on the requirements for files and format and then **[CLICK HERE](https://forms.gle/ykj6QcoGQD5ctnA5A)** to submit an article, re-submission, or revision.
 
 # Creating your article 
 
@@ -43,9 +44,19 @@ For the immediate future, articles generated using the existing [latex style](ht
 
 The `rjtools` package has a number of functions which can help you check that your article is ready to submit. These include:
 
-- XXX
+- `initial_check_article()` does multiple checks on the files in your paper submission folder
+    - `check_wrappers()` that the files RJournal.tex and RJournal.pdf are present
+    - `check_filenames()` file names are consistent and as requested
+    - `check_unnecessary_files()` that there are no extra files than those necessary and requested
+    - `check_cover_letter()` there is a cover letter with the files to be submitted
+    - `check_title()` that the title is in title case
+    - `check_section()` that section headings are in sentence case
+    - `check_spelling()` does a spell-check
+    - `check_proposed_pkg()` package is available on CRAN or bioconductor
+    - `check_packages_available()` additionally referenced packaged are also available on CRA or Bioconductor
+- Each of these can also be run individually.
 
-# Instructions for submitting
+# File format for submission
 
 ### New submission
 
@@ -73,4 +84,18 @@ Your paper will be checked for reproducibility by running the code provided. Ple
 
 Re-submission and revisions to accepted articles are received through the same site where new submissions are received (link below). When providing a re-submission or revision, you will need to **enter the identifier of the original submission** in the last field of the submission form. This also needs to be done if your paper has previously been rejected, and you have made appropriate corrections for it to be considered again.
 
-### [Click here to submit an article, re-submission, or revision](https://forms.gle/ykj6QcoGQD5ctnA5A).
+### Note on special issue articles
+
+A special issue article can be considered to be a refereed journal article and generally carries more weight than an unrefereed conference proceedings.
+
+Conference committees will designate a "Conference Editor in Chief" (CEiC) who
+will be primarily responsible for putting the special issue together. For 
+this pilot to be successful, it is important that putting together the
+special issue does not significantly increase the workload of the regular
+editors or the administrative team that helps to build the issues. It
+will be the responsibility of the CEiC to identify associate editors if needed,
+assign reviewers, accept and reject papers, and assemble the special issue.
+It will also be the responsibility of the CEiC to make sure that the issue reflects the diversity of the community, and that the
+[R Consortium and R Community Code of Conduct](https://wiki.r-consortium.org/view/R_Consortium_and_the_R_Community_Code_of_Conduct) 
+is followed during the process. 
+
