--- a/index.Rmd
+++ b/index.Rmd
@@ -78,6 +78,8 @@ The R Journal accepts a variety of article topics including:
 
 - Packages: Details of contributed R packages that are available on CRAN or Bioconductor, that go beyond a package vignette. This includes providing the broader context, implementation details, applications or examples of use, with the purpose being to make the work relevant to a wider readership than only the package users. The paper might explain the novelty in implementation and use of R, introduce new data structures or general architectures that could be re-usable for other R projects.
 
+- Special issue articles: papers associated with a conference like R Medicine, or possibly a collection of papers on a particular topic of interest.
+
 ## History
 
 The R Journal was established in 2009, superseding the [R News](http://www.r-project.org/doc/Rnews/index.html).  For historical purposes it also a news section, that includes items from R Core, updates from CRAN and Bioconductor, foRwards activiies and conference reports.
