playing with style

--- a/submissions.Rmd
+++ b/submissions.Rmd
@@ -19,7 +19,7 @@ Articles for the R Journal are short to medium length, no more than 20 pages, on
 - motivating letter that describes why your paper is suitable for the consideration by the R Journal.
 - if needed, supplementary files that might include additional technical details or examples.
 
-Read the information below on the requirements for files and format and then **[CLICK HERE](https://forms.gle/ykj6QcoGQD5ctnA5A)** to submit an article, re-submission, or revision.
+<div class = "rj-blue"> Read the information below on the requirements for files and format] and then **[CLICK HERE](https://forms.gle/ykj6QcoGQD5ctnA5A)** to submit an article, re-submission, or revision. </div>
 
 # Creating your article 
 
