playing with style

--- a/submissions.Rmd
+++ b/submissions.Rmd
@@ -27,7 +27,7 @@ The [rjtools](https://rjournal.github.io/rjtools/) package has a template to cre
 
 It is strongly recommended that you use the `create_article()` function. Knitting the Rmd will generate both an HTML and PDF format of your paper. 
 
-If you currently use the `rticles::rjournal_article` output format for R Markdown, you should be simply able to change output formats to `rjtools::rjournal_web_article` to switch to the new style.
+If you currently use the `rticles::rjournal_article` output format for R Markdown, the change involves five steps: (1) change output formats to `rjtools::rjournal_web_article` to switch to the new style, (2) remove any latex specific functionality, (3) change figure, table references to `\@ref()` and (4) add the `rjournal.csl` and `rjournal.css` template files to your folder, updating YAML to utilise them, and (5) set the reference to the `.bib` in the YAML.
 
 When writing your article you should aim to write without specific reference to HTML and LaTeX codes. If you do need to write code specific to the HTML or PDF output, you can use `knitr::is_html_output()` and `knitr::is_latex_output()` to
 conditionally produce a particular output.
