update to info on submitting

--- a/submissions.Rmd
+++ b/submissions.Rmd
@@ -23,11 +23,11 @@ Articles for the R Journal are short to medium length, no more than 20 pages, on
 
 # Creating your article 
 
+## Rmarkdown to output html and pdf
+
 The [rjtools](https://rjournal.github.io/rjtools/) package has a template to create the files needed for a submission in the form required by the R Journal. 
 
 It is strongly recommended that you use the `create_article()` function. Knitting the Rmd will generate both an HTML and PDF format of your paper. 
-
-If you currently use the `rticles::rjournal_article` output format for R Markdown, the change involves five steps: (1) change output formats to `rjtools::rjournal_web_article` to switch to the new style, (2) remove any latex specific functionality, (3) change figure, table references to `\@ref()` and (4) add the `rjournal.csl` and `rjournal.css` template files to your folder, updating YAML to utilise them, and (5) set the reference to the `.bib` in the YAML.
 
 When writing your article you should aim to write without specific reference to HTML and LaTeX codes. If you do need to write code specific to the HTML or PDF output, you can use `knitr::is_html_output()` and `knitr::is_latex_output()` to
 conditionally produce a particular output.
@@ -38,7 +38,13 @@ https://rstudio.github.io/distill/
 
 We are especially looking for creative uses of interactive content in HTML formatted articles. This will require that you make different code chunks evaluated conditionally using `eval=knitr::is_html_output()` or `eval=knitr::is_latex_output()` with appropriate re-captioning, and conditional inline reference links. Interactive plots should be produced with a manageable file size (aim for under 10Mb) which may require small data examples.
 
-For the immediate future, articles generated using the existing [latex style](https://journal.r-project.org/share/author-guide.pdf) will also be accepted. 
+## Converting from rticles:rjournal_article Rmarkdown
+
+If you currently use the `rticles::rjournal_article` output format for R Markdown, the change involves five steps: (1) change output formats to `rjtools::rjournal_web_article` to switch to the new style, (2) remove any latex specific functionality, (3) change figure, table references to `\@ref()` and (4) add the `rjournal.csl` and `rjournal.css` template files to your folder, updating YAML to utilise them, and (5) set the reference to the `.bib` in the YAML.
+
+## Traditional latex format
+
+Articles can also be written using the traditional [latex template](https://journal.r-project.org/share/RJtemplate.zip).  Using this style you will need to provide RJwrapper.tex, RJwrapper.pdf, RJournal.sty, your-article.tex (which contains the content of your paper), your-article.bib, your-article.R (to reproduce results in your paper). You should avoid using any other specialist latex style files. The `rjtools` check functions described below can also be applied to check your files prior to submission.
 
 # Checking your article
 
@@ -68,13 +74,13 @@ To submit a new article to the R Journal, you will need to complete. You will ne
 - Names of all authors.
 - Article title.
 - Article type.
-- Article keywords/tags. You should be prepared to select at least one or two from the list (current CRAN Task Views) and you are free to add an additional words or phrases that accurately describe your paper.
+- Article keywords/tags. You should be prepared to select at least one or two from the list (which is the same as the current CRAN Task Views) and you are free to add an additional words or phrases that accurately describe your paper.
 - **Zip** file containing:
     - paper files to build the article including the `.Rmd`, `.tex`, `.bib`, `.sty`, figures. 
     - file to reproduce the results, including R scripts, and data.
     - motivating letter that describes why your paper is suitable for the consideration by the R Journal.
-    - if needed, supplementary files that might include additional technical details or examples.
-- List of the supplementary files (as they are provided in your unzipped file set). These include any `.Rmd`, `.R`, data files like `.csv`, `.rda`, `.rds`, and supplementary documents that contain additional technical details for examples. It should NOT contain a list of figure files. This list is used to automatically build the `.zip` file that is distributed along with your paper, when it is published. Think about this as the list of files that contain all the other information that might be relevant for the reader of your article.
+    - reproducibility (supplementary) files in order that results reported in your paper can be reproduced, plus any additional files that contain additional technical details for your work or extra examples.
+- **A list of the reproducibility and supplementary files**, exactly as they are placed in your paper directory, e.g. `mypaper.Rmd, data/mydata.rds, scripts/mycode.R, appendix.pdf`. This list is used to automatically build the `.zip` file that is distributed along with your paper as supplementary materials, when it is published. Thus it is important that you provide the comma-delimited file names to streamline the build of your paper. If you have a lot of data and code files you so that listing them all is prohibitive, you can zip them into one file to list. Note that, figure files are not considered supplementary materials for the R Journal. 
 
 You may have problems submitting if size of your submission zip file is more than 10Mb. If you have large files, for example, data files, you can make them available on an alternative site and provide the links in the paper. If you have problems, please contact the Editor-in-Chief at <r-journal@r-project.org>.
 
