update to info on submitting

--- a/submissions.Rmd
+++ b/submissions.Rmd
@@ -19,11 +19,11 @@ Articles for the R Journal are short to medium length, no more than 20 pages, on
 - motivating letter that describes why your paper is suitable for the consideration by the R Journal.
 - if needed, supplementary files that might include additional technical details or examples.
 
-<div class = "rj-blue"> Read the information below on the requirements for files and format] and then **[CLICK HERE](https://forms.gle/ykj6QcoGQD5ctnA5A)** to submit an article, re-submission, or revision. </div>
+<div class = "rj-blue"> Read the information below on the requirements for files and format and then **[CLICK HERE](https://forms.gle/ykj6QcoGQD5ctnA5A)** to submit an article, re-submission, or revision. </div>
 
 # Creating your article 
 
-## Rmarkdown to output html and pdf
+### Rmarkdown to output html and pdf
 
 The [rjtools](https://rjournal.github.io/rjtools/) package has a template to create the files needed for a submission in the form required by the R Journal. 
 
@@ -32,19 +32,19 @@ It is strongly recommended that you use the `create_article()` function. Knittin
 When writing your article you should aim to write without specific reference to HTML and LaTeX codes. If you do need to write code specific to the HTML or PDF output, you can use `knitr::is_html_output()` and `knitr::is_latex_output()` to
 conditionally produce a particular output.
 
-The web articles for the R Journal are based on the [distill framework], which provides several styling and arrangement options for your article contents. The distill R package documentation (generally also applicable to articles 
-written for the R Journal) describes how various article elements can be used:
-https://rstudio.github.io/distill/
+The web articles for the R Journal are based on the distill framework, which provides several styling and arrangement options for your article contents. The **distill R package documentation** (generally also applicable to articles 
+written for the R Journal) describes various article elements and Rmarkdown syntax:
+https://rstudio.github.io/distill/. 
 
 We are especially looking for creative uses of interactive content in HTML formatted articles. This will require that you make different code chunks evaluated conditionally using `eval=knitr::is_html_output()` or `eval=knitr::is_latex_output()` with appropriate re-captioning, and conditional inline reference links. Interactive plots should be produced with a manageable file size (aim for under 10Mb) which may require small data examples.
 
-## Converting from rticles:rjournal_article Rmarkdown
+### Converting from rticles:rjournal_article Rmarkdown
 
 If you currently use the `rticles::rjournal_article` output format for R Markdown, the change involves five steps: (1) change output formats to `rjtools::rjournal_web_article` to switch to the new style, (2) remove any latex specific functionality, (3) change figure, table references to `\@ref()` and (4) add the `rjournal.csl` and `rjournal.css` template files to your folder, updating YAML to utilise them, and (5) set the reference to the `.bib` in the YAML.
 
-## Traditional latex format
+### Traditional latex format
 
-Articles can also be written using the traditional [latex template](https://journal.r-project.org/share/RJtemplate.zip).  Using this style you will need to provide RJwrapper.tex, RJwrapper.pdf, RJournal.sty, your-article.tex (which contains the content of your paper), your-article.bib, your-article.R (to reproduce results in your paper). You should avoid using any other specialist latex style files. The `rjtools` check functions described below can also be applied to check your files prior to submission.
+Articles can also be written using the  traditional [latex template](https://journal.r-project.org/share/RJtemplate.zip).  Using this style you will need to provide RJwrapper.tex, RJwrapper.pdf, RJournal.sty, your-article.tex (which contains the content of your paper), your-article.bib, your-article.R (to reproduce results in your paper), in addition to the motivation letter. You should avoid using any other specialist latex style files. The `rjtools` check functions described below can also be applied to check your files prior to submission.
 
 # Checking your article
 
