--- a/submissions.Rmd
+++ b/submissions.Rmd
@@ -80,7 +80,7 @@ To submit a new article to the R Journal, you will need to complete. You will ne
     - file to reproduce the results, including R scripts, and data.
     - motivating letter that describes why your paper is suitable for the consideration by the R Journal.
     - reproducibility (supplementary) files in order that results reported in your paper can be reproduced, plus any additional files that contain additional technical details for your work or extra examples.
-- **A list of the reproducibility and supplementary files**, exactly as they are placed in your paper directory, e.g. `mypaper.Rmd, data/mydata.rds, scripts/mycode.R, appendix.pdf`. This list is used to automatically build the `.zip` file that is distributed along with your paper as supplementary materials, when it is published. Thus it is important that you provide the comma-delimited file names to streamline the build of your paper. If you have a lot of data and code files you so that listing them all is prohibitive, you can zip them into one file to list. Note that, figure files are not considered supplementary materials for the R Journal. 
+- **A list of the reproducibility and supplementary files**, exactly as they are placed in your paper directory, to be entered comma-delimited like `mypaper.Rmd, data/mydata.rds, scripts/mycode.R, appendix.pdf`. This list is used to automatically build the `.zip` file that is distributed along with your paper as supplementary materials, when it is published. Thus it is important that you provide the comma-delimited file names to streamline the build of your paper. If you have a lot of data and code files you so that listing them all is prohibitive, you can zip them into one file to list. Note that, figure files are not considered supplementary materials for the R Journal. 
 
 You may have problems submitting if size of your submission zip file is more than 10Mb. If you have large files, for example, data files, you can make them available on an alternative site and provide the links in the paper. If you have problems, please contact the Editor-in-Chief at <r-journal@r-project.org>.
 
