added SJY rating

--- a/index.Rmd
+++ b/index.Rmd
@@ -56,13 +56,17 @@ p > span.doi, td > span.doi {
 
 The R Journal is the peer-reviewed, open-access scientific journal, published by The R Foundation. It features short to medium length articles (up to 20 pages) covering topics of interest to users and developers of R. For example, description and implementation details of R packages, surveys or reviews of R software related to a particular area, applications of R software or descriptions of teaching resources related to R. 
 
-The R Journal reaches a wide audience and has a thorough review process. Papers are expected to be concise, clearly written, not too technical, clearly related R, and follow reproducible practices. Additional technical details and examples could be included as supplementary material. Authors of refereed articles should take care to:
+<table>
+<tr> <td> <a href="https://www.scimagojr.com/journalsearch.php?q=21100255423&amp;tip=sid&amp;exact=no" title="SCImago Journal &amp; Country Rank"><img border="0" src="https://www.scimagojr.com/journal_img.php?id=21100255423" alt="SCImago Journal &amp; Country Rank"  /></a>
+</td> 
+<td> The R Journal reaches a wide audience and has a thorough review process. Papers are expected to be concise, clearly written, not too technical, clearly related R, and follow reproducible practices. Additional technical details and examples could be included as supplementary material. Authors of refereed articles should take care to:
 
 * put their contribution in context, in particular discuss related R functions or packages;
 * explain the motivation for their contribution;
-* provide code to reproduce the material in the paper.
+* provide code to reproduce the material in the paper. </td>
+</tr>
+</table>
 
-R Journal's impact factor is increasing, as reported by  [SJR](https://www.scimagojr.com/journalsearch.php?q=21100255423&tip=sid), indicating the the journal is considered very useful and helpful by the academic community. 
 
 ## Article types
 
