added kieran to web site

--- a/index.Rmd
+++ b/index.Rmd
@@ -106,6 +106,7 @@ r-journal@r-project.org
 - Xiaoyue Cheng, Univerity of Nebraska, Omaha, USA
 - Katarina Domijan, Maynooth University, Ireland
 - Isabella Gollini, University College Dublin, Ireland
+- Kieran Healy, Duke University, USA
 - Adam Loy, Carleton University, USA 
 - Elizabeth Sweeney, Cornell University, USA
 - Priyanga Dilini Talagala, University of Moratuwa, Sri Lanka
