--- a/submissions.Rmd
+++ b/submissions.Rmd
@@ -14,8 +14,8 @@ d-article > * {
 
 Articles for the R Journal are short to medium length, no more than 20 pages, on topics of interest to the R community. The submission needs to include:
 
-- paper files to build the article including the `.Rmd`, `.tex`, `.bib`, `.sty`, figures. 
-- file to reproduce the results, including R scripts, and data.
+- paper files to build the article including the `.Rmd`, `.tex`, `.bib`, `.sty`, figures, and the output files `.html`, `.pdf`. 
+- files to reproduce the results presented in the paper, including R scripts, and data.
 - motivating letter that describes why your paper is suitable for the consideration by the R Journal.
 - if needed, supplementary files that might include additional technical details or examples.
 
