updated AE list

--- a/index.Rmd
+++ b/index.Rmd
@@ -103,6 +103,7 @@ r-journal@r-project.org
 - Elizabeth Atkinson, Mayo Clinic, USA
 - Rasmus Bååth, Lund University, Sweden
 - Przemek Biecek, University of Warsaw, Poland
+- Chris Brunsdon, Maynooth University, Ireland
 - Mine Çetinkaya-Rundel, Duke University, USA
 - Xiaoyue Cheng, University of Nebraska, Omaha, USA
 - Katarina Domijan, Maynooth University, Ireland
@@ -111,6 +112,7 @@ r-journal@r-project.org
 - Adam Loy, Carleton University, USA 
 - Elizabeth Sweeney, Cornell University, USA
 - Priyanga Dilini Talagala, University of Moratuwa, Sri Lanka
+- Emi Tanaka, Monash University, Australia
 - Nicholas Tierney, Telethon Kids, Australia
 - Mark van der Loo, Statistics Netherlands, the Netherlands
 - Susan Vanderplas, University of Nebraska, Lincoln, USA
