--- a/_articles/RJ-2021-038/RJ-2021-038.Rmd
+++ b/_articles/RJ-2021-038/RJ-2021-038.Rmd
@@ -32,7 +32,7 @@ packages:
 CTV: ~
 creative_commons: CC BY
 output:
-  rjdistill::rjournal_web_article:
+  rjtools::rjournal_web_article:
     self_contained: no
     toc: no
 
