--- a/_articles/RJ-2021-044/RJ-2021-044.Rmd
+++ b/_articles/RJ-2021-044/RJ-2021-044.Rmd
@@ -31,7 +31,7 @@ CTV: ~
 creative_commons: CC BY
 preview: feature.png
 output:
-  rjdistill::rjournal_web_article:
+  rjtools::rjournal_web_article:
     self_contained: no
     toc: no
 
