--- a/_articles/RJ-2021-052/RJ-2021-052.Rmd
+++ b/_articles/RJ-2021-052/RJ-2021-052.Rmd
@@ -32,7 +32,7 @@ CTV: ~
 creative_commons: CC BY
 bibliography: forceps.bib
 output:
-  rjdistill::rjournal_web_article:
+  rjtools::rjournal_web_article:
     self_contained: no
     toc: no
 
