--- a/_articles/RJ-2021-057/RJ-2021-057.Rmd
+++ b/_articles/RJ-2021-057/RJ-2021-057.Rmd
@@ -43,7 +43,7 @@ CTV:
 - SpatioTemporal
 creative_commons: CC BY
 output:
-  rjdistill::rjournal_web_article:
+  rjtools::rjournal_web_article:
     self_contained: no
     toc: no
 
