--- a/_articles/RJ-2021-066/RJ-2021-066.Rmd
+++ b/_articles/RJ-2021-066/RJ-2021-066.Rmd
@@ -69,7 +69,7 @@ CTV:
 - Survival
 creative_commons: CC BY
 output:
-  rjdistill::rjournal_web_article:
+  rjtools::rjournal_web_article:
     self_contained: no
     toc: no
 
