--- a/_issues/2010-2/2010-2.Rmd
+++ b/_issues/2010-2/2010-2.Rmd
@@ -4,7 +4,7 @@ description: "Articles published in the Dec. 2010 issue"
 draft: false
 date: 2010-12-01
 output:
-  rjdistill::rjournal_web_article:
+  rjtools::rjournal_web_article:
     self_contained: false
 ---
 
