--- a/_issues/2011-1/2011-1.Rmd
+++ b/_issues/2011-1/2011-1.Rmd
@@ -4,7 +4,7 @@ description: "Articles published in the June 2011 issue"
 draft: false
 date: 2011-06-01
 output:
-  rjdistill::rjournal_web_article:
+  rjtools::rjournal_web_article:
     self_contained: false
 ---
 
