--- a/_issues/accepted/accepted.Rmd
+++ b/_issues/accepted/accepted.Rmd
@@ -4,7 +4,7 @@ description: "Accepted articles not yet published in an issue"
 draft: false
 date: "`r Sys.Date()`"
 output:
-  rjdistill::rjournal_web_article:
+  rjtools::rjournal_web_article:
     self_contained: false
 ---
 
