--- a/_articles/RJ-2021-027/RJ-2021-027.Rmd
+++ b/_articles/RJ-2021-027/RJ-2021-027.Rmd
@@ -48,7 +48,7 @@ CTV: Survival
 creative_commons: CC BY
 preview: feature.png
 output:
-  rjdistill::rjournal_web_article:
+  rjtools::rjournal_web_article:
     self_contained: no
     toc: no
 
