--- a/_articles/RJ-2021-030/RJ-2021-030.Rmd
+++ b/_articles/RJ-2021-030/RJ-2021-030.Rmd
@@ -41,7 +41,7 @@ CTV:
 creative_commons: CC BY
 preview: feature.png
 output:
-  rjdistill::rjournal_web_article:
+  rjtools::rjournal_web_article:
     self_contained: no
     toc: no
 
