--- a/_articles/RJ-2021-041/RJ-2021-041.Rmd
+++ b/_articles/RJ-2021-041/RJ-2021-041.Rmd
@@ -80,7 +80,7 @@ creative_commons: CC BY
 always_allow_html: yes
 preview: feature.png
 output:
-  rjdistill::rjournal_web_article:
+  rjtools::rjournal_web_article:
     self_contained: no
     toc: no
 bibliography: RJournal-final-submission.bib 
