--- a/_articles/RJ-2021-050/RJ-2021-050.Rmd
+++ b/_articles/RJ-2021-050/RJ-2021-050.Rmd
@@ -24,7 +24,7 @@ slug: RJ-2021-050
 date_received: '2020-10-30'
 date: '2021-06-08'
 output:
-  rjdistill::rjournal_web_article:
+  rjtools::rjournal_web_article:
     self_contained: no
     toc: no
 bibliography: tsibbletalk.bib
