--- a/_articles/RJ-2021-051/RJ-2021-051.Rmd
+++ b/_articles/RJ-2021-051/RJ-2021-051.Rmd
@@ -44,7 +44,7 @@ CTV: ~
 creative_commons: CC BY
 bibliography: listdown.bib
 output:
-  rjdistill::rjournal_web_article:
+  rjtools::rjournal_web_article:
     self_contained: no
     toc: no
 ---
