--- a/_articles/RJ-2021-053/RJ-2021-053.Rmd
+++ b/_articles/RJ-2021-053/RJ-2021-053.Rmd
@@ -57,7 +57,7 @@ CTV:
 - WebTechnologies
 creative_commons: CC BY
 output:
-  rjdistill::rjournal_web_article:
+  rjtools::rjournal_web_article:
     self_contained: no
     toc: no
 
