--- a/_articles/RJ-2021-054/RJ-2021-054.Rmd
+++ b/_articles/RJ-2021-054/RJ-2021-054.Rmd
@@ -49,7 +49,7 @@ CTV:
 creative_commons: CC BY
 preview: feature.png
 output:
-  rjdistill::rjournal_web_article:
+  rjtools::rjournal_web_article:
     self_contained: no
     toc: no
 
