--- a/_articles/RJ-2021-055/RJ-2021-055.Rmd
+++ b/_articles/RJ-2021-055/RJ-2021-055.Rmd
@@ -49,7 +49,7 @@ CTV:
 - Robust
 creative_commons: CC BY
 output:
-  rjdistill::rjournal_web_article:
+  rjtools::rjournal_web_article:
     self_contained: no
     toc: no
 
