--- a/_articles/RJ-2021-056/RJ-2021-056.Rmd
+++ b/_articles/RJ-2021-056/RJ-2021-056.Rmd
@@ -33,7 +33,7 @@ packages:
 CTV: ~
 creative_commons: CC BY
 output:
-  rjdistill::rjournal_web_article:
+  rjtools::rjournal_web_article:
     self_contained: no
     toc: no
 
