--- a/_articles/RJ-2021-059/RJ-2021-059.Rmd
+++ b/_articles/RJ-2021-059/RJ-2021-059.Rmd
@@ -60,7 +60,7 @@ CTV:
 - WebTechnologies
 creative_commons: CC BY
 output:
-  rjdistill::rjournal_web_article:
+  rjtools::rjournal_web_article:
     self_contained: no
     toc: no
 
