--- a/_articles/RJ-2021-060/RJ-2021-060.Rmd
+++ b/_articles/RJ-2021-060/RJ-2021-060.Rmd
@@ -45,7 +45,7 @@ CTV:
 - Multivariate
 creative_commons: CC BY
 output:
-  rjdistill::rjournal_web_article:
+  rjtools::rjournal_web_article:
     self_contained: no
     toc: no
 
