--- a/_articles/RJ-2021-061/RJ-2021-061.Rmd
+++ b/_articles/RJ-2021-061/RJ-2021-061.Rmd
@@ -48,7 +48,7 @@ CTV:
 - SocialSciences
 creative_commons: CC BY
 output:
-  rjdistill::rjournal_web_article:
+  rjtools::rjournal_web_article:
     self_contained: no
     toc: no
 
