--- a/_articles/RJ-2021-062/RJ-2021-062.Rmd
+++ b/_articles/RJ-2021-062/RJ-2021-062.Rmd
@@ -44,7 +44,7 @@ CTV:
 - Finance
 creative_commons: CC BY
 output:
-  rjdistill::rjournal_web_article:
+  rjtools::rjournal_web_article:
     self_contained: no
     toc: no
 
