--- a/_articles/RJ-2021-063/RJ-2021-063.Rmd
+++ b/_articles/RJ-2021-063/RJ-2021-063.Rmd
@@ -53,7 +53,7 @@ CTV:
 - Survival
 creative_commons: CC BY
 output:
-  rjdistill::rjournal_web_article:
+  rjtools::rjournal_web_article:
     self_contained: no
     toc: no
 
