--- a/_articles/RJ-2021-065/RJ-2021-065.Rmd
+++ b/_articles/RJ-2021-065/RJ-2021-065.Rmd
@@ -50,7 +50,7 @@ CTV:
 - NaturalLanguageProcessing
 creative_commons: CC BY
 output:
-  rjdistill::rjournal_web_article:
+  rjtools::rjournal_web_article:
     self_contained: no
     toc: no
 
