--- a/_issues/2011-2/2011-2.Rmd
+++ b/_issues/2011-2/2011-2.Rmd
@@ -4,7 +4,7 @@ description: "Articles published in the Dec. 2011 issue"
 draft: false
 date: 2011-12-01
 output:
-  rjdistill::rjournal_web_article:
+  rjtools::rjournal_web_article:
     self_contained: false
 ---
 
