--- a/_issues/2012-1/2012-1.Rmd
+++ b/_issues/2012-1/2012-1.Rmd
@@ -4,7 +4,7 @@ description: "Articles published in the June 2012 issue"
 draft: false
 date: 2012-06-01
 output:
-  rjdistill::rjournal_web_article:
+  rjtools::rjournal_web_article:
     self_contained: false
 ---
 
