--- a/_issues/2014-1/2014-1.Rmd
+++ b/_issues/2014-1/2014-1.Rmd
@@ -4,7 +4,7 @@ description: "Articles published in the June 2014 issue"
 draft: false
 date: 2014-06-01
 output:
-  rjdistill::rjournal_web_article:
+  rjtools::rjournal_web_article:
     self_contained: false
 ---
 
