--- a/_issues/2018-1/2018-1.Rmd
+++ b/_issues/2018-1/2018-1.Rmd
@@ -4,7 +4,7 @@ description: "Articles published in the Jul 2018 issue"
 draft: false
 date: 2018-06-01
 output:
-  rjdistill::rjournal_web_article:
+  rjtools::rjournal_web_article:
     self_contained: false
 ---
 
