--- a/_issues/2021-2/2021-2.Rmd
+++ b/_issues/2021-2/2021-2.Rmd
@@ -4,7 +4,7 @@ description: "Articles published in the December 2021 issue"
 draft: false
 date: 2021-12-01
 output:
-  rjdistill::rjournal_web_article:
+  rjtools::rjournal_web_article:
     self_contained: false
 ---
 
