--- a/_news/RJ-2021-1-editorial/editorial.Rmd
+++ b/_news/RJ-2021-1-editorial/editorial.Rmd
@@ -23,7 +23,7 @@ packages:
 CTV: ~
 creative_commons: CC BY
 output:
-  rjdistill::rjournal_web_article:
+  rjtools::rjournal_web_article:
     self_contained: no
     toc: no
 
