--- a/_news/RJ-2021-1-rmed2020/rmed2020.Rmd
+++ b/_news/RJ-2021-1-rmed2020/rmed2020.Rmd
@@ -79,7 +79,7 @@ CTV: ~
 creative_commons: CC BY
 bibliography: Rmed2020-Rjournal.bib
 output:
-  rjdistill::rjournal_web_article:
+  rjtools::rjournal_web_article:
     self_contained: no
     toc: no
 
