--- a/_news/RJ-2021-1-whyr2021/whyr2021.Rmd
+++ b/_news/RJ-2021-1-whyr2021/whyr2021.Rmd
@@ -27,7 +27,7 @@ packages:
 CTV: ~
 creative_commons: CC BY
 output:
-  rjdistill::rjournal_web_article:
+  rjtools::rjournal_web_article:
     self_contained: no
     toc: no
 
