removed @ in editorial board

--- a/index.Rmd
+++ b/index.Rmd
@@ -122,7 +122,7 @@ r-journal@r-project.org
 ### Editorial advisory board
 
 - Henrik Bengtssen, University of California, San Francisco
-- Gabriela de Quiroz, Chief Data Scientist @ IBM
+- Gabriela de Quiroz, Chief Data Scientist, IBM
 - Michael Kane, Yale University, USA
 - Rebecca Killick, Lancaster University
 
