update Loy affiliation

--- a/index.Rmd
+++ b/index.Rmd
@@ -114,7 +114,7 @@ r-journal@r-project.org
 - Katarina Domijan, Maynooth University, Ireland
 - Isabella Gollini, University College Dublin, Ireland
 - Kieran Healy, Duke University, USA
-- Adam Loy, Carleton University, USA 
+- Adam Loy, Carleton College, USA 
 - Elizabeth Sweeney, Cornell University, USA
 - Priyanga Dilini Talagala, University of Moratuwa, Sri Lanka
 - Emi Tanaka, Monash University, Australia
