updated Editor/AE list

--- a/index.Rmd
+++ b/index.Rmd
@@ -99,6 +99,7 @@ r-journal@r-project.org
 - Simon Urbanek, The University of Auckland, New Zealand
 - Gavin Simpson, Aarhus University, Denmark
 - Di Cook, Monash University, Australia
+- Mark van der Loo, Statistics Netherlands, The Netherlands
 
 ### Associate editors
 
@@ -109,6 +110,7 @@ r-journal@r-project.org
 - Przemek Biecek, University of Warsaw, Poland
 - Simone Blomberg, University of Queensland, Australia
 - Chris Brunsdon, Maynooth University, Ireland
+- Kevin Burke, University of Limerick, Ireland
 - Mine Çetinkaya-Rundel, Duke University, USA
 - Xiaoyue Cheng, University of Nebraska, Omaha, USA
 - Katarina Domijan, Maynooth University, Ireland
@@ -119,7 +121,6 @@ r-journal@r-project.org
 - Priyanga Dilini Talagala, University of Moratuwa, Sri Lanka
 - Emi Tanaka, Monash University, Australia
 - Nicholas Tierney, Telethon Kids, Australia
-- Mark van der Loo, Statistics Netherlands, the Netherlands
 - Susan Vanderplas, University of Nebraska, Lincoln, USA
 - Earo Wang, The University of Auckland, New Zealand
 - Emily Zabor, The Cleveland Clinic and Tassig Cancer Institute, USA
