--- a/index.Rmd
+++ b/index.Rmd
@@ -117,7 +117,7 @@ r-journal@r-project.org
 - Isabella Gollini, University College Dublin, Ireland
 - Kieran Healy, Duke University, USA
 - Adam Loy, Carleton College, USA 
-- Elizabeth Sweeney, Cornell University, USA
+- Elizabeth Sweeney, University of Pennsylvania, USA
 - Priyanga Dilini Talagala, University of Moratuwa, Sri Lanka
 - Emi Tanaka, Monash University, Australia
 - Nicholas Tierney, Telethon Kids, Australia
